# third_party_meshoptimizer

./: .git-blame-ignore-revs  BUILD.gn  COPYING  OAT.xml  README.OpenSource.md  README.md  README_en.md  README_zh.md  bundel.json  bundle.json
patches/: patches.json
src/: allocator.cpp  clusterizer.cpp  indexcodec.cpp  indexgenerator.cpp  meshoptimizer.h  overdrawanalyzer.cpp  overdrawoptimizer.cpp  quantization.cpp  simplifier.cpp  spatialorder.cpp  stripifier.cpp  vcacheanalyzer.cpp  vcacheoptimizer.cpp  vertexcodec.cpp  vertexfilter.cpp  vfetchanalyzer.cpp  vfetchoptimizer.cpp
testcase/: decode_meshopt_test.cpp  tests.cpp
