# Copyright (c) 2021 Huawei Device Co., Ltd.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("meshoptimizer_headers_config") {
    include_dirs = ["src"]
}

ohos_shared_library("meshoptimizer") {
    sources = [
        "src/meshoptimizer.h",
        "src/allocator.cpp",
        "src/clusterizer.cpp",
        "src/indexcodec.cpp",
        "src/indexgenerator.cpp",
        "src/overdrawanalyzer.cpp",
        "src/overdrawoptimizer.cpp",
        "src/quantization.cpp",
        "src/simplifier.cpp",
        "src/spatialorder.cpp",
        "src/stripifier.cpp",
        "src/vcacheanalyzer.cpp",
        "src/vcacheoptimizer.cpp",
        "src/vertexcodec.cpp",
        "src/vertexfilter.cpp",
        "src/vfetchanalyzer.cpp",
        "src/vfetchanalyzer.cpp",
    ]
    public_configs = [ ":meshoptimizer_headers_config" ]

    part_name = "meshoptimizer"
    subsystem_name = "thirdparty"
}